--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -13,7 +13,11 @@
  *
  */
 
-.body 
-{
-        /* Settings here */
+.body {
+        height: 100vh;
+        margin: 0;
+        overflow-y: auto;
+        overflow-x: hidden;
+        perspective: 1px;
+        display: inline-flexbox;
 }
