Make a class that would disable drag select [css] part

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -13,11 +13,11 @@
  *
  */
 
-.body {
-        height: 100vh;
-        margin: 0;
-        overflow-y: auto;
-        overflow-x: hidden;
-        perspective: 1px;
-        display: inline-flexbox;
+.global--disable-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 }
