Prepare for FOIL-Home UI part

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -21,3 +21,8 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: transparent;
 }
+
+
+/**************************************************************************************************
+ *                                      FOIL-Home-UI Stack
+ ***************************************************************************************************/
