Prepare for Electric-E  UI part [css]

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -26,3 +26,16 @@
 /**************************************************************************************************
  *                                      FOIL-Home-UI Stack
  ***************************************************************************************************/
+
+
+
+
+
+
+
+
+
+
+ /**************************************************************************************************
+ *                                      Electric-E UI Stack
+ ***************************************************************************************************/
