Prepare for Smith-Pad  UI part [css]

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -39,3 +39,15 @@
  /**************************************************************************************************
  *                                      Electric-E UI Stack
  ***************************************************************************************************/
+
+
+
+
+
+
+
+
+
+ /**************************************************************************************************
+ *                                      Smith-Pad UI Stack
+ ***************************************************************************************************/
