Fixed issue with the [css] [.global-disable-select]

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -13,14 +13,13 @@
  *
  */
 
-.global--disable-select {
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        -webkit-touch-callout: none;
-        -webkit-tap-highlight-color: transparent;
-}
+ .global-disable-select 
+ {
+         -webkit-user-select: none;
+         -moz-user-select: none;
+         -ms-user-select: none;
+         user-select: none;
+ }
 
 
 /**************************************************************************************************
@@ -39,8 +38,6 @@
  /**************************************************************************************************
  *                                      Electric-E UI Stack
  ***************************************************************************************************/
-
-
 
 
 
