--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -28,9 +28,14 @@
 
 
 
- .foil-home-layout-q1 {}
-
-
+.foil-home-layout-q1 {}
+.foil-home-layout-q1-background{}
+.foil-home-layout-q1-content{}
+.foil-home-layout-q1-content h1 {}
+.foil-home-layout-q1-content p {}
+.foil-home-layout-q1-content b {}
+.foil-home-global-button {}
+.foil-home-global-button:hover {}
 
 
 
