--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -27,7 +27,7 @@
  ***************************************************************************************************/
 
 
-
+.foil-home-global-setting {}
 .foil-home-layout-q1 {}
 .foil-home-layout-q1-background{}
 .foil-home-layout-q1-content{}
@@ -36,6 +36,8 @@
 .foil-home-layout-q1-content b {}
 .foil-home-global-button {}
 .foil-home-global-button:hover {}
+
+
 
 
 
