--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -27,7 +27,7 @@
  ***************************************************************************************************/
 
 
-.foil-home-global-setting {}
+.foil-home-global-setting-vertical-one {zoom: 200%}
 .foil-home-layout-q1 {}
 .foil-home-layout-q1-background{}
 .foil-home-layout-q1-content{}
