--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -28,6 +28,7 @@
 
 
 .foil-home-global-setting-vertical-one {zoom: 200%}
+.foil-home-window-blinds-effect{resize: vertical; overflow: auto;}
 .foil-home-layout-q1 {}
 .foil-home-layout-q1-background{}
 .foil-home-layout-q1-content{}
