--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -13,13 +13,12 @@
  *
  */
 
- .global-disable-select 
- {
-         -webkit-user-select: none;
-         -moz-user-select: none;
-         -ms-user-select: none;
-         user-select: none;
- }
+.global-disable-select {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+}
 
 
 /**************************************************************************************************
@@ -27,15 +26,39 @@
  ***************************************************************************************************/
 
 
-.foil-home-global-setting-vertical-one {zoom: 200%}
-.foil-home-window-blinds-effect{resize: vertical; overflow: auto;}
+.foil-home-global-setting-vertical-one {
+        zoom: 200%
+}
+
+.foil-home-window-blinds-effect {
+        resize: vertical;
+        overflow: auto;
+}
+
+.foil-home-window-blinds-effect-home-screen-secondary-screen {
+        background-color: transparent;
+        color: black;
+        padding: 88px 1px;
+        border-radius: 0px;
+        overflow: none;
+        animation-name: home_screen_main_secondary_screen_animation;
+        animation-duration: 1s;
+}
+
 .foil-home-layout-q1 {}
-.foil-home-layout-q1-background{}
-.foil-home-layout-q1-content{}
+
+.foil-home-layout-q1-background {}
+
+.foil-home-layout-q1-content {}
+
 .foil-home-layout-q1-content h1 {}
+
 .foil-home-layout-q1-content p {}
+
 .foil-home-layout-q1-content b {}
+
 .foil-home-global-button {}
+
 .foil-home-global-button:hover {}
 
 
@@ -43,7 +66,7 @@
 
 
 
- /**************************************************************************************************
+/**************************************************************************************************
  *                                      Electric-E UI Stack
  ***************************************************************************************************/
 
@@ -53,6 +76,6 @@
 
 
 
- /**************************************************************************************************
+/**************************************************************************************************
  *                                      Smith-Pad UI Stack
  ***************************************************************************************************/
