--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -20,6 +20,8 @@
         user-select: none;
 }
 
+.senal-ui-banner-layout-qa20-td{}
+
 
 /**************************************************************************************************
  *                                      FOIL-Home-UI Stack
