--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -27,8 +27,19 @@
  *                                      FOIL-Home-UI Stack
  ***************************************************************************************************/
 
+.foil-home-layout-q0 {}
 
+.foil-home-layout-q0-background {}
 
+.foil-home-layout-q0-text-color {}
+
+.foil-home-layout-q0-font-style {}
+
+.foil-home-layout-q0-font-align-left {}
+
+.foil-home-layout-q0-font-align-right {}
+
+.foil-home-layout-q0-font-align-center {}
 
 
 
